<resources>
    <string name="app_name">Vicissitude</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_activate_all">Activate All</string>
    <string name="action_deactivate_all">Deactivate All</string>
    <string name="title_activity_sms_edit">Edit SMS Alarm</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_alert_retention_key">alert-retention</string>
    <string name="pref_alert_retention_title">Alert History Retention</string>
    <string name="pref_alert_retention_summary">How long to store your alert history in days</string>
    <string name="days">day(s)</string>
    <string name="pref_storage_settings_title">Storage</string>
    <string name="pref_storage_settings_key">alert-storage</string>
    <string name="pref_sound_settings_title">Sound</string>
    <string name="pref_sound_settings_key">alert-settings-sound</string>
    <string name="pref_alert_volume_key">alert-sound-volume</string>
    <string name="pref_alert_volume_title">Volume</string>
    <string name="pref_alert_volume_summary">Volume</string>
    <string name="pref_override_volume_key">override-volume-key</string>
    <string name="pref_override_volume_title">Override Volume Settings</string>
    <string name="pref_override_volume_summary">Overrides your set volume so that even if you accidentally turn your volume down, your alerts will be at the volume you set here</string>
    <string name="pref_flood_settings_key">flood-settings</string>
    <string name="pref_flood_settings_title">Flood Protection</string>
    <string name="pref_flood_protection_key">flood-protection-switch</string>
    <string name="pref_flood_protection_title">Enable Flood Protection</string>
    <string name="pref_flood_protection_summary">Flood protection will protect you from receiving too many notifications.</string>
    <string name="pref_flood_protection_message_limit_key">flood-protection-message-limit</string>
    <string name="pref_flood_protection_message_limit_title">Message Limit</string>
    <string name="pref_flood_protection_time_title">Protection Period</string>
    <string name="pref_flood_protection_time_key">flood-protection-time</string>
    <string name="human_readable_flood_protection">flood-protection-human-readable</string>
    <string name="messages">message(s)</string>
    <string name="seconds">second(s)</string>
    <string name="menu_edit">Edit Alarm</string>
    <string name="menu_delete">Delete Alarm</string>
    <string name="sms_edit_alarm_name_hint">Alarm Name</string>
    <string name="sms_edit_alarm_new_title">Create SMS Alarm</string>
    <string name="create_sms_blank_name">Alarms without names are like hotdogs without the sausage!</string>
    <string name="sms_edit_alarm_summary_hint">Alarm Summary</string>
    <string name="sms_edit_alert_numbers_hint">Senders to trigger on</string>
    <string name="sms_edit_alert_expressions_hint">RegEx to trigger on</string>
    <string name="sms_edit_alert_test_body_hint">Message Body</string>
    <string name="sms_edit_alert_notification_period_from_hint">Notification Period (From)</string>
    <string name="sms_edit_alert_notification_period_to_hint">Notification Period (To)</string>
    <string name="pref_sound_alarm_tone_key">alert-settings-sound-alarm-tone</string>
    <string name="pref_sound_alarm_tone_title">Alarm Tone</string>
    <string name="sms_fragment_new_alarm_dialog_title">Alarm Name</string>
    <string name="from_timepicker_dialog_title">From Time</string>
    <string name="to_timepicker_dialog_title">To Time</string>
    <string name="sms_edit_button_test_regex">Test</string>
    <string name="title_activity_log">Alert Logs</string>
    <string name="human_readable_flood_preamble">"You will receive no more than "</string>
    <string name="within">" within "</string>
    <string name="sms_edit_action_save_alarm_title">Test and save</string>
    <string name="sms_edit_action_close_without_saving_title">Close without saving</string>
    <string name="sms_action_add_alarm_title">Add</string>
    <string name="sms_action_view_logs_title">View Logs</string>
    <string name="sms_edit_alarm_name_label">Alarm Name:</string>
    <string name="sms_edit_alarm_summary_label">Alarm Summary:</string>
    <string name="sms_edit_alarm_senders_label">Alert Senders (Comma separated):</string>
    <string name="sms_edit_alarm_regex_label">Regular Expressions (1 per line):</string>
    <string name="sms_edit_body_test_label">Mock message for testing your alarm:</string>
    <string name="sms_edit_notification_from_label">Notification Period (From):</string>
    <string name="sms_edit_notification_to_label">Notification Period (To):</string>
    <string name="spartan_easter_egg">This. Is. BETAAAAAAAAAAAAA</string>
    <string name="notification_title_notification_service">"Incoming Alert(s) - "</string>
    <string name="action_clear_logs">Clear Logs</string>
</resources>
