<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:scrollbars="none">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.apps.howard.vicissitude.activities.fragments.SmsEditFragment">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/sms_edit_alarm_name_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sms_edit_alarm_name_hint"
            android:imeOptions="actionNext"
            android:maxLength="@integer/max_alarm_title_length"
            android:singleLine="true" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/sms_edit_alarm_summary_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <com.apps.howard.vicissitude.controls.LimitedEditTextPreference
            android:id="@+id/txtSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sms_edit_alarm_summary_hint"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="109"
            android:maxLines="3"
            android:scrollHorizontally="false"
            android:singleLine="true" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/sms_edit_alarm_senders_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <EditText
            android:id="@+id/txtNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sms_edit_alert_numbers_hint"
            android:imeOptions="actionNext"
            android:inputType="phone|textMultiLine" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/sms_edit_alarm_regex_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <EditText
            android:id="@+id/txtExpressions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sms_edit_alert_expressions_hint"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:typeface="monospace" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/sms_edit_body_test_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <EditText
            android:id="@+id/txtBodyTest"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:hint="@string/sms_edit_alert_test_body_hint"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/sms_edit_notification_from_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <EditText
            android:id="@+id/clockFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/sms_edit_alert_notification_period_from_hint"
            android:imeOptions="actionNext" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/sms_edit_notification_to_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <EditText
            android:id="@+id/clockTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/sms_edit_alert_notification_period_to_hint"
            android:imeOptions="actionDone" />

        <Button
            android:id="@+id/btnTest"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:minWidth="60dp"
            android:text="@string/sms_edit_button_test_regex" />

    </TableLayout>
</ScrollView>


